--- a/src/templates/7_UZ_ChildDI_Family_Type_Homes_ru.html
+++ b/src/templates/7_UZ_ChildDI_Family_Type_Homes_ru.html
@@ -94,7 +94,7 @@
             <div>IFP1а. Область:</div>
             <div>
                 <select id="ifp1a" name="ifp1a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -102,7 +102,7 @@
             <div>IFP1b. Район</div>
             <div>
                 <select id="ifp1b" name="ifp1b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -110,7 +110,7 @@
             <div>IFP1c. Settlement</div>
             <div>
                 <select id="ifp1c" name="ifp1c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
