--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
@@ -192,7 +192,7 @@
             <div>LK14b. Region</div>
             <div>
                 <select id="lk14b" name="lk14b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -201,7 +201,7 @@
             <div>LK14c. District</div>
             <div>
                 <select id="lk14c" name="lk14c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -209,7 +209,7 @@
             <div>LK14d. Settlement</div>
             <div>
                 <select id="lk14d" name="lk14d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -414,7 +414,7 @@
             <div>CM3b. Region</div>
             <div>
                 <select id="cm3b" name="cm3b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -423,7 +423,7 @@
             <div>CM3c. District</div>
             <div>
                 <select id="cm3c" name="cm3c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -431,7 +431,7 @@
             <div>CM3d. Settlement</div>
             <div>
                 <select id="cm3d" name="cm3d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -965,7 +965,7 @@
             <div>c. Region:</div>
             <div>
                 <select id="cm10c" name="cm10c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -974,7 +974,7 @@
             <div>d. District:</div>
             <div>
                 <select id="cm10d" name="cm10d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -982,7 +982,7 @@
             <div>CM10e. Settlement</div>
             <div>
                 <select id="cm10e" name="cm10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -1022,7 +1022,7 @@
             <div>c. Region:</div>
             <div>
                 <select id="cm11c" name="cm11c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1031,7 +1031,7 @@
             <div>d. District:</div>
             <div>
                 <select id="cm11d" name="cm11d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1040,7 +1040,7 @@
             <div>CM11e. Settlement</div>
             <div>
                 <select id="cm11e" name="cm11e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -1223,7 +1223,7 @@
             <div>CT3b. Region</div>
             <div>
                 <select id="ct3b" name="ct3b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1232,7 +1232,7 @@
             <div>CT3c. District</div>
             <div>
                 <select id="ct3c" name="ct3c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1240,7 +1240,7 @@
             <div>CT3d. Settlement</div>
             <div>
                 <select id="ct3d" name="ct3d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -1772,7 +1772,7 @@
             <div>c. Region:</div>
             <div>
                 <select id="ct10c" name="ct10c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1781,7 +1781,7 @@
             <div>d. District:</div>
             <div>
                 <select id="ct10d" name="ct10d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1789,7 +1789,7 @@
             <div>CT10e. Settlement</div>
             <div>
                 <select id="ct10e" name="ct10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -1829,7 +1829,7 @@
             <div>c. Region:</div>
             <div>
                 <select id="ct11c" name="ct11c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1838,7 +1838,7 @@
             <div>d. District:</div>
             <div>
                 <select id="ct11d" name="ct11d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -1847,7 +1847,7 @@
             <div>CT11e. Settlement</div>
             <div>
                 <select id="ct11e" name="ct11e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -2507,7 +2507,7 @@
             <div>c. Region:</div>
             <div>
                 <select id="cg10c" name="cg10c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -2516,7 +2516,7 @@
             <div>d. District:</div>
             <div>
                 <select id="cg10d" name="cg10d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -2524,7 +2524,7 @@
             <div>cg10e. Settlement</div>
             <div>
                 <select id="cg10e" name="cg10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -2563,7 +2563,7 @@
             <div>c. Region:</div>
             <div>
                 <select id="cg11c" name="cg11c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -2572,7 +2572,7 @@
             <div>d. District:</div>
             <div>
                 <select id="cg11d" name="cg11d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -2581,7 +2581,7 @@
             <div>cg11e. Settlement</div>
             <div>
                 <select id="cg11e" name="cg11e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
 
             </div>
@@ -2666,7 +2666,7 @@
             <div>SA3a. Region:</div>
             <div>
                 <select id="sa3a" name="sa3a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -2675,7 +2675,7 @@
             <div>SA3b. District:</div>
             <div>
                 <select id="sa3b" name="sa3b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -2684,7 +2684,7 @@
             <div>SA3c. Settlement</div>
             <div>
                 <select id="sa3c" name="sa3c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
