--- a/src/templates/8_UZ_ChildDI_Patronat_Family_uz.html
+++ b/src/templates/8_UZ_ChildDI_Patronat_Family_uz.html
@@ -95,7 +95,7 @@
             <div>PF1a. Viloyat:</div>
             <div>
                 <select id="pf1a" name="pf1a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -103,7 +103,7 @@
             <div>IFP1b. Tuman</div>
             <div>
                 <select id="pf1b" name="pf1b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
@@ -111,7 +111,7 @@
             <div>PF1c. Settlement</div>
             <div>
                 <select id="pf1c" name="pf1c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option value="1">-- choose ---</option>
+                    <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
