atribut name la checkbox...

--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
@@ -405,7 +405,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CM3a. Place of birth</div>
             <div class="flex items-center">
-                <input id="cm3a_dk" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                <input id="cm3a_dk" name="cm3a_dk" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
                 <label for="cm3a_dk" class="ms-2 text-sm text-gray-900">9. Not known</label>
             </div>
         </div>
@@ -1214,7 +1214,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CT3a. Place of birth</div>
             <div class="flex items-center">
-                <input id="ct3a_dk" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                <input id="ct3a_dk" name="ct3a_dk" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
                 <label for="ct3a_dk" class="ms-2 text-sm text-gray-900">9. Not known</label>
             </div>
         </div>
