--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
@@ -268,7 +268,7 @@
             </div>
         </div>
 
-        
+
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. BOLA OILASI HAQIDA MA&#39;LUMOT</h2>
 
         <p class="mt-6">QFAM: Bolani ixtisoslashtirilgan ta&#39;lim muassasasiga ilk bor qabul qilish vaqtida...</p>
@@ -700,7 +700,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CM3a. Tug&#39;ilgan joyi</div>
             <div class="flex items-center">
-                <input id="cm3a_dk" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                <input id="cm3a_dk" name="cm3a_dk" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
                 <label for="cm3a_dk" class="ms-2 text-sm text-gray-900">9. Not known</label>
             </div>
         </div>
