--- a/src/templates/4_UZ_ChildDI_Material_Resources_en.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_en.html
@@ -69,7 +69,7 @@
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>I1. Name of the specialized educational institution</div>
+            <div>I1. Name of the institution</div>
             <div>
                 <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -95,27 +95,22 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4a. Region</div>
             <div>
-                <input type="text" id="i4a" name="i4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4b. District</div>
             <div>
-                <input type="text" id="i4b" name="i4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
-        <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>I4c. Settlement</div>
-            <div>
-                <input type="text" id="i4c" name="i4c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
-        </div>
-        <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>I4d. Type of settlement</div>
-            <div>
-                <input type="text" id="i4d" name="i4d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
-        </div>
+
+        <input type="hidden" id="i4d" name="i4d" />
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I9. Type of institution</div>
             <div>
@@ -208,7 +203,7 @@
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. LOCATION AND ACCESSIBILITY</h2>
 
-        <p class="mt-6">LA1 Does the institution have any of the following in its immediate vicinity (within a 3 to 7 minutes walk of its boundaries)?…</p>
+        <p class="mt-6">LA1. Does the institution have any of the following in its immediate vicinity (within a 3 to 7 minutes walk of its boundaries)?…</p>
 
         <div class="ml-4">
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -839,7 +834,7 @@
                     <td class="p-1 text-center"><input id="af6_b-5" type="radio" value="5" name="af6_b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                 </tr>
                 <tr>
-                    <td class="p-1">c. The carpentry elements (windows, doors))</td>
+                    <td class="p-1">c. The carpentry elements (windows, doors)</td>
                     <td class="p-1 text-center"><input id="af6_c-1" type="radio" value="1" name="af6_c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_c-2" type="radio" value="2" name="af6_c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_c-3" type="radio" value="3" name="af6_c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
@@ -879,7 +874,7 @@
                     <td class="p-1 text-center"><input id="af6_g-5" type="radio" value="5" name="af6_g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                 </tr>
                 <tr>
-                    <td class="p-1">h. The common interior spaces (hallways, stairs etc.).)</td>
+                    <td class="p-1">h. The common interior spaces (hallways, stairs etc.).</td>
                     <td class="p-1 text-center"><input id="af6_h-1" type="radio" value="1" name="af6_h" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_h-2" type="radio" value="2" name="af6_h" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_h-3" type="radio" value="3" name="af6_h" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
@@ -915,7 +910,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div class="col-span-1">
-                AF7.. How is the heating of the accommodation space in the ensured?                <small class="block">CHECK ALL THAT APPLY</small>
+                AF7. How is the heating of the accommodation space in the ensured?                <small class="block">CHECK ALL THAT APPLY</small>
 
             </div>
             <div class="col-span-1 flex flex-col gap-2">
@@ -939,7 +934,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">AF8. In the accommodation space of the RC, the water supply is…</div>
+            <div class="col-span-1">AF8. In the accommodation space, the water supply is…</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="af8-1" type="radio" value="1" name="af8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1145,7 +1140,7 @@
                 <tr class="border-b">
                     <th class="p-2 text-left">AC1. Please provide the following information about the institution&#39;s accommodation capacity</th>
                     <th class="p-2 text-center">Total number of rooms</th>
-                    <th class="p-2 text-center">Total ares (sqm)</th>
+                    <th class="p-2 text-center">Total area (sqm)</th>
                 </tr>
             </thead>
             <tbody>
@@ -1269,7 +1264,7 @@
         </table>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>AC2. Within the premises of the RC, what is the maximum number of beds in a sleeping quarter?</div>
+            <div>AC2. Within the premises of the institution, what is the maximum number of beds in a sleeping quarter?</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="ac2" name="ac2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full disabled:bg-gray-100" />
             </div>
@@ -1389,7 +1384,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>f. Total number of squat toilets</div>
+            <div>g. Total number of squat toilets</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="ac5g" name="ac5g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full disabled:bg-gray-100" />
             </div>
@@ -2066,24 +2061,22 @@
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex flex-col gap-4">
                     <div class="grid grid-cols-2">
-                        <div>a. Dedicated spaces </div>
+                        <div></div>
                         <div class="flex items-center gap-2">
                             <input type="text" id="rce3a" name="rce3a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-20 disabled:bg-gray-100" />
-                            calories
-                        </div>
+                            spaces                        </div>
                     </div>
                     <div class="grid grid-cols-2">
                         <div>b. Shared spaces</div>
                         <div class="flex items-center gap-2">
                             <input type="text" id="rce3b" name="rce3b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-20 disabled:bg-gray-100" />
-                            calories
-                        </div>
+                            spaces                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <p class="mt-6">RCERCE4. How would you rate the available resources for education activities within the institution?</p>
+        <p class="mt-6">RCE4. How would you rate the available resources for education activities within the institution?</p>
         <small class="italic mt-2">Please use the following scale of 1 (very bad) to 5 (excellent)</small>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div class="col-span-1 ml-4">The spaces are adequate in size and number for the education activities.</div>
@@ -2388,7 +2381,7 @@
                     <td class="p-2 text-center"><input id="edu3f-5" type="radio" value="5" name="edu3f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                 </tr>
                 <tr>
-                    <td class="p-2">g. Multisensory room (for psycho-sensory-motor stimulation))</td>
+                    <td class="p-2">g. Multisensory room (for psycho-sensory-motor stimulation)</td>
                     <td class="p-2 text-center"><input id="edu2g-1" type="radio" value="1" name="edu2g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-2 text-center"><input id="edu2g-2" type="radio" value="2" name="edu2g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-2 text-center"><input id="edu2g-3" type="radio" value="3" name="edu2g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
@@ -2650,7 +2643,7 @@
                 </tr>
                 <tr class="text-black font-bold">
                     <td class="text-left p-2">10</td>
-                    <td class="text-left p-2">TOTAL PERSONNEL EXPENDITURES (code 10.1+10.2+10.3+10.4)</td>
+                    <td class="text-left p-2">TOTAL PERSONNEL EXPENDITURES (code 10.1+10.2+10.3+10.4+10.5)</td>
                     <td class="text-center p-2">
                         <input type="text" id="e10" name="e10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full disabled:bg-gray-100" />
                     </td>
