--- a/src/templates/4_UZ_ChildDI_Material_Resources_uz.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_uz.html
@@ -69,7 +69,7 @@
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. MUASSASA HAQIDA UMUMIY MA&#39;LUMOT</h2>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>I1. Ixtisoslashlgan ta&#39;lim muassasasining nomi</div>
+            <div>I1. Muassasa nomi</div>
             <div>
                 <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -95,27 +95,22 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4a. Viloyat</div>
             <div>
-                <input type="text" id="i4a" name="i4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4b. Tuman</div>
             <div>
-                <input type="text" id="i4b" name="i4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
-        <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>I4c. Settlement</div>
-            <div>
-                <input type="text" id="i4c" name="i4c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
-        </div>
-        <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>I4d. Type of settlement</div>
-            <div>
-                <input type="text" id="i4d" name="i4d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
-        </div>
+
+        <input type="hidden" id="i4d" name="i4d" />
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I9. Tashkilot turi</div>
             <div>
@@ -208,7 +203,7 @@
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. JOYI VA BORISH QULAYLIGI</h2>
 
-        <p class="mt-6">LA1 Muassasaning yon atrofida (3-7 daqiqalik piyoda masofada) quyidagilardan birortasi bormi?…</p>
+        <p class="mt-6">LA1. Muassasaning yon atrofida (3-7 daqiqalik piyoda masofada) quyidagilardan birortasi bormi?…</p>
 
         <div class="ml-4">
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -814,11 +809,11 @@
             <thead>
                 <tr>
                     <th></th>
-                    <th>1. Juda yomon</th>
-                    <th>2. Yomon</th>
-                    <th>3. O&#39;rta hol</th>
-                    <th>4. Yaxshi</th>
-                    <th>5. Juda yaxshi</th>
+                    <th>Juda&lt;br&gt;yomon</th>
+                    <th>Yomon</th>
+                    <th>O&#39;rta&lt;br&gt;hol</th>
+                    <th>Yaxshi</th>
+                    <th>Juda&lt;br&gt;yaxshi</th>
                 </tr>
             </thead>
             <tbody>
@@ -839,7 +834,7 @@
                     <td class="p-1 text-center"><input id="af6_b-5" type="radio" value="5" name="af6_b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                 </tr>
                 <tr>
-                    <td class="p-1">c. Duradgorlik elementlari (derazalar, eshiklar))</td>
+                    <td class="p-1">c. Duradgorlik elementlari (derazalar, eshiklar)</td>
                     <td class="p-1 text-center"><input id="af6_c-1" type="radio" value="1" name="af6_c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_c-2" type="radio" value="2" name="af6_c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_c-3" type="radio" value="3" name="af6_c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
@@ -879,7 +874,7 @@
                     <td class="p-1 text-center"><input id="af6_g-5" type="radio" value="5" name="af6_g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                 </tr>
                 <tr>
-                    <td class="p-1">h. Umumiy ichki hududlar (koridorlar, zinapoyalar va boshqalar).)</td>
+                    <td class="p-1">h. Umumiy ichki hududlar (koridorlar, zinapoyalar va boshqalar).</td>
                     <td class="p-1 text-center"><input id="af6_h-1" type="radio" value="1" name="af6_h" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_h-2" type="radio" value="2" name="af6_h" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-1 text-center"><input id="af6_h-3" type="radio" value="3" name="af6_h" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
@@ -915,7 +910,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div class="col-span-1">
-                AF7.. Turar joyni isitish qanday ta&#39;minlanadi?                <small class="block">BARCHA KERAKLILARINI BELGILANG</small>
+                AF7. Turar joyni isitish qanday ta&#39;minlanadi?                <small class="block">BARCHA KERAKLILARINI BELGILANG</small>
 
             </div>
             <div class="col-span-1 flex flex-col gap-2">
@@ -1389,7 +1384,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>f. Chashageni bor hojatxonalarning umumiy soni</div>
+            <div>g. Chashageni bor hojatxonalarning umumiy soni</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="ac5g" name="ac5g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full disabled:bg-gray-100" />
             </div>
@@ -2066,24 +2061,22 @@
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex flex-col gap-4">
                     <div class="grid grid-cols-2">
-                        <div>a. Alohida ajratilgan joylar</div>
+                        <div></div>
                         <div class="flex items-center gap-2">
                             <input type="text" id="rce3a" name="rce3a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-20 disabled:bg-gray-100" />
-                            calories
-                        </div>
+                            bo&#39;shliqlar                        </div>
                     </div>
                     <div class="grid grid-cols-2">
                         <div>b. Umumiy joylar</div>
                         <div class="flex items-center gap-2">
                             <input type="text" id="rce3b" name="rce3b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-20 disabled:bg-gray-100" />
-                            calories
-                        </div>
+                            bo&#39;shliqlar                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <p class="mt-6">RCERCE4. Muassasada ta&#39;lim faoliyati uchun mavjud resurslarni qanday baholaysiz?</p>
+        <p class="mt-6">RCE4. Muassasada ta&#39;lim faoliyati uchun mavjud resurslarni qanday baholaysiz?</p>
         <small class="italic mt-2">Iltimos, 1 (juda yomon) dan 5 (a&#39;lo) gacha bo&#39;lgan quyidagi shkaladan foydalaning</small>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div class="col-span-1 ml-4">Joylar hajmi va soni bo&#39;yicha ta&#39;lim faoliyati uchun yetarli.</div>
@@ -2388,7 +2381,7 @@
                     <td class="p-2 text-center"><input id="edu3f-5" type="radio" value="5" name="edu3f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                 </tr>
                 <tr>
-                    <td class="p-2">g. Multisensorli xona (psixo-sensor-motor stimulyatsiyasi uchun))</td>
+                    <td class="p-2">g. Multisensorli xona (psixo-sensor-motor stimulyatsiyasi uchun)</td>
                     <td class="p-2 text-center"><input id="edu2g-1" type="radio" value="1" name="edu2g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-2 text-center"><input id="edu2g-2" type="radio" value="2" name="edu2g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                     <td class="p-2 text-center"><input id="edu2g-3" type="radio" value="3" name="edu2g" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
@@ -2650,7 +2643,7 @@
                 </tr>
                 <tr class="text-black font-bold">
                     <td class="text-left p-2">10</td>
-                    <td class="text-left p-2">JAMI HODIMLARGA XARAJATLAR (kod 10.1+10.2+10.3+10.4)</td>
+                    <td class="text-left p-2">JAMI HODIMLARGA XARAJATLAR (kod 10.1+10.2+10.3+10.4+10.5)</td>
                     <td class="text-center p-2">
                         <input type="text" id="e10" name="e10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full disabled:bg-gray-100" />
                     </td>
